cabal-version:      2.4

name:               hascalam

version:            0.1.1.0

synopsis:           Haskell to and from Scalameta

homepage:           https://github.com/sjbiaga/hascalam

license:            MIT

license-file:       LICENSE

author:             Sebastian Gliţa-Catina

maintainer:         sjb.ia.ga@gmail.com

category:           Language

extra-source-files: CHANGELOG.md

library
    exposed-modules:
        HaScalaM.Classes,
        HaScalaM.Classes.Base,
        HaScalaM.Classes.Enums,
        HaScalaM.Classes.Ref,
        HaScalaM.Classes.Stat,
        HaScalaM.Classes.Type,
        HaScalaM.Classes.Term,
        HaScalaM.Types.Base,
        HaScalaM.Types.Enums,
        HaScalaM.Types.Pat,
        HaScalaM.Types.Ref,
        HaScalaM.Types.Stat,
        HaScalaM.Types.Term,
        HaScalaM.Types.Type,
        HaScalaM.Types.Tilde,
        HaScalaM.Instances,
        HaScalaM.Instances.Base,
        HaScalaM.Instances.Enums,
        HaScalaM.Instances.Pat,
        HaScalaM.Instances.Ref,
        HaScalaM.Instances.Show,
        HaScalaM.Instances.Stat,
        HaScalaM.Instances.Stat.Decl,
        HaScalaM.Instances.Stat.Defn,
        HaScalaM.Instances.Term,
        HaScalaM.Instances.Type,
        HaScalaM.Instances.Tilde

    build-depends:
        base ^>=4.18

    hs-source-dirs:   src

    default-language: GHC2021
